--- a/pom.xml
+++ b/pom.xml
@@ -28,16 +28,16 @@
 
 	<groupId>io.gravitee.reporter</groupId>
 	<artifactId>gravitee-reporter-file</artifactId>
-	<version>0.8.0-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Gravitee IO - Gateway File Reporter</name>
 
 	<properties>
 		<!-- Gravitee's project versions -->
-		<gravitee-gateway-api.version>0.14.0</gravitee-gateway-api.version>
-		<gravitee-reporter-api.version>0.10.0</gravitee-reporter-api.version>
-		<gravitee-common.version>0.11.0</gravitee-common.version>
+		<gravitee-gateway-api.version>1.0.0-SNAPSHOT</gravitee-gateway-api.version>
+		<gravitee-reporter-api.version>1.0.0-SNAPSHOT</gravitee-reporter-api.version>
+		<gravitee-common.version>1.0.0-SNAPSHOT</gravitee-common.version>
 
 		<!-- External project versions -->
 		<jetty.version>9.2.11.v20150529</jetty.version>
