--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>io.gravitee</groupId>
         <artifactId>gravitee-parent</artifactId>
-        <version>5</version>
+        <version>6-SNAPSHOT</version>
     </parent>
 
     <groupId>io.gravitee.management</groupId>
@@ -42,18 +42,17 @@
         <gravitee-fetcher-api.version>1.0.0-SNAPSHOT</gravitee-fetcher-api.version>
 
         <apacheds-server-jndi.version>1.5.5</apacheds-server-jndi.version>
-        <jackson.version>2.7.3</jackson.version>
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
-        <jersey.version>2.19</jersey.version>
-        <jetty.version>9.3.3.v20150827</jetty.version>
-        <spring.security.version>4.0.3.RELEASE</spring.security.version>
-        <spring.security.oauth2.version>2.0.8.RELEASE</spring.security.oauth2.version>
+        <jersey.version>2.23.2</jersey.version>
+        <jetty.version>9.3.13.v20161014</jetty.version>
+        <spring.security.version>4.1.3.RELEASE</spring.security.version>
+        <spring.security.oauth2.version>2.0.11.RELEASE</spring.security.oauth2.version>
         <validation-api.version>1.1.0.Final</validation-api.version>
         <mail.version>1.4.7</mail.version>
-        <freemarker.version>2.3.22</freemarker.version>
+        <freemarker.version>2.3.23</freemarker.version>
         <java-jwt.version>2.2.1</java-jwt.version>
         <guava.version>18.0</guava.version>
-        <assertj-core.version>3.5.1</assertj-core.version>
+        <assertj-core.version>3.5.2</assertj-core.version>
     </properties>
 
     <modules>
