--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>io.gravitee</groupId>
 		<artifactId>gravitee-parent</artifactId>
-		<version>5</version>
+		<version>6-SNAPSHOT</version>
 	</parent>
 
 	<groupId>io.gravitee.repository</groupId>
@@ -33,7 +33,6 @@
 
 	<properties>
 		<jedis.version>2.9.0</jedis.version>
-		<jackson.version>2.5.3</jackson.version>
 		<gravitee-repository.version>1.0.0-SNAPSHOT</gravitee-repository.version>
 		<spring-data-redis.version>1.7.4.RELEASE</spring-data-redis.version>
 
