--- a/gravitee-gateway-services/gravitee-gateway-services-monitoring/pom.xml
+++ b/gravitee-gateway-services/gravitee-gateway-services-monitoring/pom.xml
@@ -77,6 +77,7 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
