--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-container/pom.xml
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-container/pom.xml
@@ -50,11 +50,11 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- To override Spring commons-logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
             <version>${slf4j.version}</version>
-            <scope>runtime</scope>
         </dependency>
 
         <!-- Jetty -->
