--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 	<name>Gravitee IO - API Management - Repository MongoDB</name>
 
 	<properties>
-		<gravitee-repository.version>1.0.0</gravitee-repository.version>
+		<gravitee-repository.version>1.1.0-SNAPSHOT</gravitee-repository.version>
 		<embed.mongo.version>1.50.2</embed.mongo.version>
 		<mongo.version>3.0.4</mongo.version>
 		<spring.data.mongodb.version>1.7.2.RELEASE</spring.data.mongodb.version>
