--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,7 @@
     <properties>
         <gravitee-definition.version>1.0.0</gravitee-definition.version>
         <gravitee-common.version>1.0.0</gravitee-common.version>
-        <gravitee-repository.version>1.0.0</gravitee-repository.version>
+        <gravitee-repository.version>1.1.0-SNAPSHOT</gravitee-repository.version>
         <gravitee-plugin-core.version>1.0.0</gravitee-plugin-core.version>
         <gravitee-plugin-policy.version>1.0.0</gravitee-plugin-policy.version>
         <gravitee-plugin-resource.version>1.0.0</gravitee-plugin-resource.version>
