--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 		<gravitee-repository.version>1.1.0-SNAPSHOT</gravitee-repository.version>
 		<spring-data-redis.version>1.7.4.RELEASE</spring-data-redis.version>
 
-		<gravitee-repository-test.version>1.0.0</gravitee-repository-test.version>
+		<gravitee-repository-test.version>1.1.0-SNAPSHOT</gravitee-repository-test.version>
 		<maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
 	</properties>
 
