--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <liquibase-slf4j.version>2.0.0</liquibase-slf4j.version>
         <mysql-connector-java.version>5.1.46</mysql-connector-java.version>
         <postgresql.version>42.1.4</postgresql.version>
+        <mariaDB.version>2.2.3</mariaDB.version>
     </properties>
 
     <dependencies>
@@ -127,6 +128,20 @@
         </dependency>
 
         <dependency>
+            <groupId>ch.vorburger.mariaDB4j</groupId>
+            <artifactId>mariaDB4j</artifactId>
+            <version>${mariaDB.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>${mariaDB.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.5</version>
@@ -185,6 +200,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Xmx1024m</argLine>
+                </configuration>
                 <executions>
                     <execution>
                         <id>default-test</id>
@@ -211,6 +229,17 @@
                         <configuration>
                             <systemPropertyVariables>
                                 <jdbcType>postgresql</jdbcType>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>mariadb</id>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <jdbcType>mariadb</jdbcType>
                             </systemPropertyVariables>
                         </configuration>
                     </execution>
