--- a/src/main/resources/liquibase/master.yml
+++ b/src/main/resources/liquibase/master.yml
@@ -5,4 +5,5 @@ databaseChangeLog:
     - file: liquibase/changelogs/v1_15_0/schema.yml
   - include:
     - file: liquibase/changelogs/v1_16_0/schema.yml
+  - include:
     - file: liquibase/changelogs/v1_16_0/schema-plans.yml
