--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,8 @@
         <module>gravitee-gateway-policy</module>
         <module>gravitee-gateway-resource</module>
         <module>gravitee-gateway-el</module>
-        <module>gravitee-gateway-http-client</module>
+        <module>gravitee-gateway-core</module>
+        <module>gravitee-gateway-http</module>
         <module>gravitee-gateway-standalone</module>
         <module>gravitee-gateway-handlers</module>
         <module>gravitee-gateway-services</module>
@@ -161,8 +162,8 @@
     </dependencies>
 
     <properties>
-        <gravitee-definition.version>1.10.0</gravitee-definition.version>
-        <gravitee-common.version>1.10.0</gravitee-common.version>
+        <gravitee-definition.version>1.11.0-SNAPSHOT</gravitee-definition.version>
+        <gravitee-common.version>1.11.0-SNAPSHOT</gravitee-common.version>
         <gravitee-expression-language.version>1.0.0</gravitee-expression-language.version>
         <gravitee-repository.version>1.16.0</gravitee-repository.version>
         <gravitee-plugin-core.version>1.4.0</gravitee-plugin-core.version>
@@ -171,6 +172,7 @@
         <gravitee-policy-api.version>1.2.0</gravitee-policy-api.version>
         <gravitee-gateway-api.version>1.9.0</gravitee-gateway-api.version>
         <gravitee-reporter-api.version>1.10.0-SNAPSHOT</gravitee-reporter-api.version>
+        <gravitee-gateway-api.version>1.10.0-SNAPSHOT</gravitee-gateway-api.version>
         <jetty.version>9.3.3.v20150827</jetty.version>
         <httpclient.version>4.5.2</httpclient.version>
         <reflections.version>0.9.10</reflections.version>
