--- a/gravitee-management-api-idp/gravitee-management-api-idp-core/pom.xml
+++ b/gravitee-management-api-idp/gravitee-management-api-idp-core/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.gravitee.management.idp</groupId>
         <artifactId>gravitee-management-api-idp</artifactId>
-        <version>1.16.4</version>
+        <version>1.16.5-SNAPSHOT</version>
     </parent>
 
     <artifactId>gravitee-management-api-idp-core</artifactId>
