--- a/src/main/resources/liquibase/master.yml
+++ b/src/main/resources/liquibase/master.yml
@@ -7,3 +7,5 @@ databaseChangeLog:
     - file: liquibase/changelogs/v1_16_0/schema.yml
   - include:
     - file: liquibase/changelogs/v1_16_0/schema-plans.yml
+  - include:
+    - file: liquibase/changelogs/v1_18_0/schema-plans.yml
