--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 	<name>Gravitee.io APIM - Repository - MongoDB</name>
 
 	<properties>
-		<gravitee-repository.version>1.16.0</gravitee-repository.version>
+		<gravitee-repository.version>1.18.0-SNAPSHOT</gravitee-repository.version>
 		<gravitee-repository-test.version>1.16.0</gravitee-repository-test.version>
 		<embed.mongo.version>1.50.5</embed.mongo.version>
 		<mongo.version>3.6.3</mongo.version>
