--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 	<name>Gravitee.io APIM - Repository - Redis</name>
 
 	<properties>
-		<gravitee-repository.version>1.16.0</gravitee-repository.version>
+		<gravitee-repository.version>1.18.0-SNAPSHOT</gravitee-repository.version>
 		<gravitee-repository-test.version>1.16.0</gravitee-repository-test.version>
 		<jedis.version>2.9.0</jedis.version>
 		<spring-data-redis.version>1.8.10.RELEASE</spring-data-redis.version>
