--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     <name>Gravitee.io APIM - Repository - JDBC</name>
 
     <properties>
-        <gravitee-repository.version>1.17.0</gravitee-repository.version>
+        <gravitee-repository.version>1.18.0-SNAPSHOT</gravitee-repository.version>
         <gravitee-repository-test.version>1.18.0-SNAPSHOT</gravitee-repository-test.version>
         <maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
         <HikariCP.version>2.7.6</HikariCP.version>
