--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 
 	<properties>
 		<gravitee-repository.version>1.18.0-SNAPSHOT</gravitee-repository.version>
-		<gravitee-repository-test.version>1.16.0</gravitee-repository-test.version>
+		<gravitee-repository-test.version>1.18.0-SNAPSHOT</gravitee-repository-test.version>
 		<embed.mongo.version>1.50.5</embed.mongo.version>
 		<mongo.version>3.6.3</mongo.version>
 		<spring.data.mongodb.version>1.10.11.RELEASE</spring.data.mongodb.version>
