--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 
 	<properties>
 		<gravitee-repository.version>1.18.0-SNAPSHOT</gravitee-repository.version>
-		<gravitee-repository-test.version>1.16.0</gravitee-repository-test.version>
+		<gravitee-repository-test.version>1.18.0-SNAPSHOT</gravitee-repository-test.version>
 		<jedis.version>2.9.0</jedis.version>
 		<spring-data-redis.version>1.8.10.RELEASE</spring-data-redis.version>
 		<maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
