--- a/src/main/resources/liquibase/master.yml
+++ b/src/main/resources/liquibase/master.yml
@@ -9,3 +9,5 @@ databaseChangeLog:
     - file: liquibase/changelogs/v1_16_0/schema-plans.yml
   - include:
     - file: liquibase/changelogs/v1_18_0/schema-plans.yml
+  - include:
+    - file: liquibase/changelogs/v1_18_0/schema-views.yml
