--- a/src/main/resources/liquibase/master.yml
+++ b/src/main/resources/liquibase/master.yml
@@ -13,3 +13,5 @@ databaseChangeLog:
     - file: liquibase/changelogs/v1_18_0/schema-pages.yml
   - include:
     - file: liquibase/changelogs/v1_18_0/schema-views.yml
+  - include:
+    - file: liquibase/changelogs/v1_18_0/schema-notification_config.yml
