--- a/pom.xml
+++ b/pom.xml
@@ -172,7 +172,7 @@
         <gravitee-policy-api.version>1.2.0</gravitee-policy-api.version>
         <gravitee-gateway-api.version>1.9.0</gravitee-gateway-api.version>
         <gravitee-reporter-api.version>1.10.0</gravitee-reporter-api.version>
-        <gravitee-gateway-api.version>1.10.0</gravitee-gateway-api.version>
+        <gravitee-gateway-api.version>1.11.0-SNAPSHOT</gravitee-gateway-api.version>
         <jetty.version>9.3.3.v20150827</jetty.version>
         <httpclient.version>4.5.2</httpclient.version>
         <reflections.version>0.9.10</reflections.version>
