--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 
     <groupId>io.gravitee.management</groupId>
     <artifactId>gravitee-management-webui</artifactId>
-    <version>1.18.0</version>
+    <version>1.18.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Gravitee.io APIM - Portal</name>
 
