--- a/gravitee-management-api-fetcher/pom.xml
+++ b/gravitee-management-api-fetcher/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>io.gravitee.management</groupId>
         <artifactId>gravitee-management-api</artifactId>
-        <version>1.18.0</version>
+        <version>1.18.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>gravitee-management-api-fetcher</artifactId>
