--- a/gravitee-management-api-services/pom.xml
+++ b/gravitee-management-api-services/pom.xml
@@ -24,7 +24,7 @@
     <parent>
 		<groupId>io.gravitee.management</groupId>
 		<artifactId>gravitee-management-api</artifactId>
-		<version>1.18.0</version>
+		<version>1.18.1-SNAPSHOT</version>
 	</parent>
 
     <groupId>io.gravitee.management.services</groupId>
