--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>io.gravitee</groupId>
         <artifactId>gravitee-parent</artifactId>
-        <version>12</version>
+        <version>13-SNAPSHOT</version>
     </parent>
 
     <groupId>io.gravitee.management</groupId>
