feat: add entrypoint registration in gateway testing sdk
gravitee-io/issues#8249

--- a/gravitee-apim-gateway/gravitee-apim-gateway-tests-sdk/pom.xml
+++ b/gravitee-apim-gateway/gravitee-apim-gateway-tests-sdk/pom.xml
@@ -139,6 +139,12 @@
         </dependency>
 
         <dependency>
+            <groupId>io.gravitee.apim.plugin.entrypoint</groupId>
+            <artifactId>gravitee-apim-plugin-entrypoint-sse</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>io.gravitee.apim.definition</groupId>
             <artifactId>gravitee-apim-definition-jackson</artifactId>
             <version>${project.version}</version>
