ci: exclude all APIM artefacts from cache
Change made to avoid cache growing. Indeed, because of the restore cache job, for each new version, we will get the cache from an older version with older artefacts that are not needed.
The cache will continue growing but far slower.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,9 +57,9 @@ commands:
         steps:
             - restore_cache:
                   keys:
-                      - gravitee-api-management-v7-<< parameters.jobName >>-{{ .Branch }}-{{ checksum "pom.xml" }}
-                      - gravitee-api-management-v7-<< parameters.jobName >>-{{ .Branch }}-
-                      - gravitee-api-management-v7-<< parameters.jobName >>-
+                      - gravitee-api-management-v8-<< parameters.jobName >>-{{ .Branch }}-{{ checksum "pom.xml" }}
+                      - gravitee-api-management-v8-<< parameters.jobName >>-{{ .Branch }}-
+                      - gravitee-api-management-v8-<< parameters.jobName >>-
     save-maven-job-cache:
         description: Restore Maven cache for a dedicated job
         parameters:
@@ -68,10 +68,14 @@ commands:
                 type: string
                 default: ""
         steps:
+            - run:
+                  name: "Exclude all APIM artefacts from cache."
+                  command: |
+                      rm -rf ~/.m2/repository/io/gravitee/apim
             - save_cache:
                   paths:
                       - ~/.m2
-                  key: gravitee-api-management-v7-<< parameters.jobName >>-{{ .Branch }}-{{ checksum "pom.xml" }}
+                  key: gravitee-api-management-v8-<< parameters.jobName >>-{{ .Branch }}-{{ checksum "pom.xml" }}
                   when: always
 
     notify-on-failure:
@@ -220,9 +224,9 @@ jobs:
                   at: .
             - restore_cache:
                   keys:
-                      - gravitee-api-management-v7-sonarcloud-analysis-{{ .Branch }}-{{ checksum "pom.xml" }}
-                      - gravitee-api-management-v7-sonarcloud-analysis-{{ .Branch }}-
-                      - gravitee-api-management-v7-sonarcloud-analysis-
+                      - gravitee-api-management-v8-sonarcloud-analysis-{{ .Branch }}-{{ checksum "pom.xml" }}
+                      - gravitee-api-management-v8-sonarcloud-analysis-{{ .Branch }}-
+                      - gravitee-api-management-v8-sonarcloud-analysis-
             - keeper/env-export:
                   secret-url: keeper://9x9YgyU6DWzux4DPoHAzDQ/field/password
                   var-name: SONAR_TOKEN
@@ -235,7 +239,7 @@ jobs:
             - save_cache:
                   paths:
                       - /opt/sonar-scanner/.sonar/cache
-                  key: gravitee-api-management-v7-sonarcloud-analysis-{{ .Branch }}-{{ checksum "pom.xml" }}
+                  key: gravitee-api-management-v8-sonarcloud-analysis-{{ .Branch }}-{{ checksum "pom.xml" }}
                   when: always
 
     validate:
@@ -308,12 +312,8 @@ jobs:
             - save_cache:
                   paths:
                       - ~/.m2/repository/io/gravitee/apim
-                  key: gravitee-api-management-v7-build-apim-{{ .Environment.CIRCLE_WORKFLOW_WORKSPACE_ID }}
+                  key: gravitee-api-management-v8-build-apim-{{ .Environment.CIRCLE_WORKFLOW_WORKSPACE_ID }}
                   when: on_success
-            - run:
-                  name: "Exclude APIM artefacts from build cache"
-                  command: |
-                      rm -rf ~/.m2/repository/io/gravitee/apim
             - save-maven-job-cache:
                   jobName: build
             - persist_to_workspace:
@@ -334,7 +334,7 @@ jobs:
                   jobName: test
             - restore_cache:
                   keys:
-                      - gravitee-api-management-v7-build-apim-{{ .Environment.CIRCLE_WORKFLOW_WORKSPACE_ID }}
+                      - gravitee-api-management-v8-build-apim-{{ .Environment.CIRCLE_WORKFLOW_WORKSPACE_ID }}
             - run:
                   name: Run tests
                   command: |
@@ -369,7 +369,7 @@ jobs:
                   jobName: test-repository
             - restore_cache:
                   keys:
-                      - gravitee-api-management-v7-build-apim-{{ .Environment.CIRCLE_WORKFLOW_WORKSPACE_ID }}
+                      - gravitee-api-management-v8-build-apim-{{ .Environment.CIRCLE_WORKFLOW_WORKSPACE_ID }}
             - run:
                   name: Run tests
                   command: |
