--- a/gravitee-apim-repository/gravitee-apim-repository-jdbc/src/main/resources/liquibase/master.yml
+++ b/gravitee-apim-repository/gravitee-apim-repository-jdbc/src/main/resources/liquibase/master.yml
@@ -119,3 +119,5 @@ databaseChangeLog:
       - file: liquibase/changelogs/v3_15_0/schema.yml
   - include:
       - file: liquibase/changelogs/v3_15_3/schema.yml
+  - include:
+      - file: liquibase/changelogs/v3_15_14/schema.yml
