--- a/gravitee-apim-gateway/gravitee-apim-gateway-core/pom.xml
+++ b/gravitee-apim-gateway/gravitee-apim-gateway-core/pom.xml
@@ -57,8 +57,14 @@
         </dependency>
 
         <dependency>
-            <groupId>io.gravitee.apim.gateway</groupId>
-            <artifactId>gravitee-apim-gateway-entrypoint</artifactId>
+            <groupId>io.gravitee.apim.plugin.entrypoint</groupId>
+            <artifactId>gravitee-apim-plugin-entrypoint-handler</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.gravitee.apim.plugin.endpoint</groupId>
+            <artifactId>gravitee-apim-plugin-endpoint-handler</artifactId>
             <version>${project.version}</version>
         </dependency>
 
