--- a/gravitee-apim-plugin/gravitee-apim-plugin-endpoint/gravitee-apim-plugin-endpoint-mock/src/main/resources/plugin.properties
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-endpoint/gravitee-apim-plugin-endpoint-mock/src/main/resources/plugin.properties
@@ -2,5 +2,5 @@ id=mock
 name=Endpoint mock
 version=${project.version}
 description=${project.description}
-class=main.java.io.gravitee.plugin.endpoint.mock.MockEndpointConnectorFactory
+class=io.gravitee.plugin.endpoint.mock.MockEndpointConnectorFactory
 type=endpoint-connector
