--- a/gravitee-apim-rest-api/gravitee-apim-rest-api-service/pom.xml
+++ b/gravitee-apim-rest-api/gravitee-apim-rest-api-service/pom.xml
@@ -84,6 +84,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.gravitee.apim.plugin.endpoint</groupId>
+			<artifactId>gravitee-apim-plugin-endpoint-handler</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>io.gravitee.apim.plugin.entrypoint</groupId>
 			<artifactId>gravitee-apim-plugin-entrypoint-handler</artifactId>
 			<version>${project.version}</version>
