--- a/gravitee-apim-perf/license-check-config.json
+++ b/gravitee-apim-perf/license-check-config.json
@@ -1,13 +1,12 @@
 {
   "ignore": [
     "*",
+    "bin",
     "node/**",
     "node_modules/**",
     "**/*.svg",
     "docs/**",
     "docker/**",
-    "index.js",
-    "src/index.js",
     "**/*.generated.*",
     "coverage/**",
     "dist/**",
@@ -18,18 +17,13 @@
     "**/Thumbs.db",
     "**/*.adoc",
     "LICENSE.txt",
-    "**/*.scss",
-    "**/.*",
-    "**/*.woff",
-    "**/*.ttf",
-    "**/*.woff2",
-    "**/*.eot",
     ".*",
     ".*/**",
-    "lib/management-webclient-sdk",
     "package-json.lock",
+    "yarn.lock",
     ".tmp/**",
-    ".vscode/**"
+    ".vscode/**",
+    "grafana/**"
   ],
   "license": "LICENSE_TEMPLATE.txt",
   "licenseFormats": {
